[tool.poetry]
name = "mytree"
version = "0.1.0"
description = ""
authors = ["Daniel Dodd <daniel_dodd@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mytree"}]

[tool.poetry.dependencies]
python = "^3.9"
jax = "*"
jaxlib = "*"
simple-pytree = "=0.1.2"

[tool.poetry.group.dev.dependencies]
black = "23.1.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.0.4"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
